--- a/MvcApplication1/Views/Home/Index.cshtml
+++ b/MvcApplication1/Views/Home/Index.cshtml
@@ -20,10 +20,10 @@
                             </a>
                             <ul class="nav nav-pills pull-right header-links">
                                 <li class="active">
-                                    <a href="#">Home</a>
+                                    <a href="#">Accueil</a>
                                 </li>
                                 <li><a href="#">Blog</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="#">Contactez-nous</a></li>
                             </ul>
                         </div>
                     </div>
@@ -53,16 +53,7 @@
                         <div class="span8">
                             <h1>Acide Désoxyribonucléique</h1>
                             <div class="text">
-                                <p>
-                                    Invenietis est une entreprise basée à Paris, animée par 8 passionnés, spécialistes
-                                    en Ingénierie Logicielle. L’aventure a commencé en 2004 avec 2 personnes pour arriver
-                                    aujourd’hui à une équipe opérationnelle, cohérente et disponible pour résoudre les
-                                    problématiques complexes des projets web et bureautique actuels. Notre entreprise
-                                    est avant tout un moyen d’aider nos partenaires et clients à créer rapidement de
-                                    la valeur en leur permettant de se consacrer pleinement à leur cœur de métier. Nous
-                                    cherchons à établir des relations de confiance, d’humain à humain, pour accompagner
-                                    les projets sur le long terme.
-                                </p>
+                                <p>Invenietis est une entreprise basée à Paris, animée par 8 passionnés, spécialistes en Ingénierie Logicielle. L’aventure a commencé en 2004 avec 2 personnes pour arriver aujourd’hui à une équipe opérationnelle, cohérente et disponible pour résoudre les problématiques complexes des projets web et bureautique actuels. Notre entreprise est avant tout un moyen d’aider nos partenaires et clients à créer rapidement de la valeur en leur permettant de se consacrer pleinement à leur cœur de métier. Nous cherchons à établir des relations de confiance, d’humain à humain, pour accompagner les projets sur le long terme.</p>
                             </div>
                             <em>
                                 Nous voyons notre mission comme quelque chose qui va bien au-delà des simples questions
@@ -77,7 +68,7 @@
             </div>
         </div>
         <div class="row-fluid">
-            <div class="span12">
+            <div class="span12 simple-bx">
                 <section class="container">
                     <div class="row-fluid">
                         <div class="span4">
@@ -87,14 +78,7 @@
                             <h1>Technique</h1>
                             <div class="text">
                                 <p>
-                                    Passionnés d’aspects techniques, nous avons toujours fait en sorte de travailler
-                                    sur les technologies de pointe et porteuses d’avenir. Nous évoluons en suivant toujours
-                                    les mêmes principes de sélection fine des technologies, ne retenant que celles qui
-                                    font preuve d’efficience dans un contexte donné. Nous avons dès le commencement
-                                    pris le parti de nous tourner vers les technologies Microsoft et nous continuons
-                                    plus que jamais à croire en l’avenir avec ces technologies. En ligne avec les évolutions
-                                    radicales du Web d’aujourd’hui, nos environnements s’appuient sur le couple classique
-                                    ASP.Net MVC / SQL Server couplé à des interfaces clientes HTML5, CSS3 et JavaScript.
+                                    Passionnés d’aspects techniques, nous avons toujours fait en sorte de travailler sur les technologies de pointe et porteuses d’avenir. Nous évoluons en suivant toujours les mêmes principes de sélection fine des technologies, ne retenant que celles qui font preuve d’efficience dans un contexte donné. Nous avons dès le commencement pris le parti de nous tourner vers l’environnement Microsoft et nous continuons plus que jamais à croire en l’avenir avec de cet écosystème. En ligne avec les évolutions radicales du Web d’aujourd’hui, nos architectures s’appuient souvent sur le couple classique ASP.Net MVC / SQL Server associé à des interfaces clientes HTML5, CSS3 et JavaScript.
                                 </p>
                             </div>
                             <em>
@@ -107,21 +91,14 @@
             </div>
         </div>
         <div class="row-fluid">
-            <div class="span12 light-orange">
+            <div class="span12 light-orange simple-bx">
                 <section class="container">
                     <div class="row-fluid">
                         <div class="span8">
                             <h1>Approche</h1>
                             <div class="text">
                                 <p>
-                                    Tous les projets que nous avons réalisés nous ont permis d’améliorer nos méthodes,
-                                    nos réflexions et nos solutions, chacun à leurs mesures et avec leurs spécificités.
-                                    Nous ne cherchons pas LA réponse mais sélectionnons les plus adaptées à chaque situation,
-                                    avec le souci permanent de leur pérennité et de leur évolutivité. Les différentes
-                                    approches modulaires que nous avons conçues et appliquées avec succès dans nos projets
-                                    se concrétisent en un ensemble de composants logiciels et d’outils qualifiés. Ces
-                                    composants, issus de notre R&D ou externes, optimisés pour fonctionner ensemble,
-                                    accélèrent et sécurisent les nouveaux développements.
+                                    Tous les projets que nous avons réalisés nous ont permis d’améliorer nos méthodes, nos réflexions et nos solutions, chacun à leurs mesures et avec leurs spécificités. Nous ne cherchons pas LA réponse mais sélectionnons les plus adaptées à chaque situation, avec le souci permanent de leur pérennité et de leur évolutivité. Les différentes approches modulaires que nous avons conçues et appliquées avec succès dans nos projets se concrétisent en un ensemble de composants logiciels et d’outils qualifiés. Ces composants, issus de notre R&D ou externes, optimisés pour fonctionner ensemble, accélèrent et sécurisent les nouveaux développements.
                                 </p>
                             </div>
                             <em>
@@ -138,7 +115,7 @@
             </div>
         </div>
         <div class="row-fluid">
-            <div class="span12">
+            <div class="span12 simple-bx">
                 <section class="container">
                     <div class="row-fluid">
                         <div class="span4">
@@ -148,13 +125,7 @@
                             <h1>Environnement</h1>
                             <div class="text">
                                 <p>
-                                    Le web n’est pas notre seul terrain de jeu. Nous travaillons également sur des environnements
-                                    bureautiques comme pour le projet CiviKey. Ce projet open source et gratuit est
-                                    destiné aux personnes en situation de handicap. Il leur permet d’utiliser l’outil
-                                    informatique avec plus de facilité en les aidants au quotidien sur toutes les interactions
-                                    homme-machine. Nous développons ce projet en partenariat avec Alcatel-Lucent, la
-                                    fondation Stéria et la Plateforme des Nouvelles Technologies de l’hôpital de Garches
-                                    (PFNT).
+                                    Le web n’est pas notre seul terrain de jeu. Nous travaillons également sur des environnements bureautiques comme pour le projet CiviKey. Ce projet open source et gratuit est destiné aux personnes en situation de handicap. Il leur permet d’utiliser l’outil informatique avec plus de facilité en les aidants au quotidien sur toutes les interactions homme-machine. Nous développons ce logiciel en partenariat avec l’école d’informatique IN’TECH INFO, Alcatel-Lucent, la fondation Stéria et la Plateforme des Nouvelles Technologies de l’hôpital de Garches (PFNT).
                                 </p>
                             </div>
                             <em>
@@ -174,7 +145,7 @@
                         <ul>
                             <li><a href="#">Accueil</a></li>
                             <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">Contactez-nous</a></li>
                         </ul>
                         <strong>Nos produits</strong>
                         <ul>
