--- a/MvcApplication1/Content/Site.less
+++ b/MvcApplication1/Content/Site.less
@@ -107,15 +107,20 @@ header .title
 
 .landing-header
 {
-	.title-bloc
-	{
-		text-align: center;
-		margin: 80px 0;
-	}
-	
 	.full-logo
 	{
 		width: 600px;
+		margin: 80px auto;
+
+		.keywords
+		{
+			position: relative;
+			top: 165px;
+			left: 3px;
+			padding-left: 3px;
+			color: @orange;
+			h1{ position: absolute; top: 0; left: 0; opacity: 0; }
+		}
 	}
 }
 
