--- a/MvcApplication1/Views/Home/Index.cshtml
+++ b/MvcApplication1/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
                             <div class="span12">
                                 <div class="full-logo" >
                                     <div class="keywords">
-                                        <h1 class="active">Architecture</h1>
+                                        <h1 class="active" style="opacity: 1; left: 20px;">Architecture</h1>
                                         <h1>Conception</h1>
                                         <h1>Développement</h1>
                                         <h1>Formation</h1>
@@ -159,19 +159,16 @@
                             <li><a href="http://civikey.fr" target="_blank">CiviKey</a></li>
                         </ul>
                     </div>
-                    <div class="span6">
+                    <div class="span6 center">
                         <strong>Suivez nous sur</strong>
-                        <ul>
-                            <li><a href="#"><img src="@Url.Content("~/content/images/twitter.png")" /></a></li>
-                            <li><a href="#"><img src="@Url.Content("~/content/images/facebook.png")" /></a></li>
-                        </ul>
-                        <br />
-                        <div class="center">
-                            <img src="@Url.Content("~/content/images/logo.png")" /><span>Copyright © 2012 Invenietis. Tous Droits Réservés.</span>
+                        <div class="follow">
+                            <a href="#"><img src="@Url.Content("~/content/images/twitter.png")" style="width: 32px;"/></a>
+                            <a href="#"><img src="@Url.Content("~/content/images/gh.png")" style="width: 32px;"/></a>
+                            <a href="#"><img src="@Url.Content("~/content/images/facebook.png")" style="width: 32px;"/></a>
                         </div>
                     </div>
                     <div class="span3">
-                        <div class="pull-right">
+                        <div class="pull-right address">
                             <address>
                                 <strong>Invenietis</strong><br />
                                 10 rue Mercoeur<br />
@@ -180,6 +177,11 @@
                                 <abbr title="Téléphone">Tel:</abbr> (+33) 1 45 92 10 45
                             </address>
                         </div>
+                    </div>
+                </div>
+                <div class="row-fluid">
+                    <div class="span12 center">
+                        <img src="@Url.Content("~/content/images/logo.png")" /><span>Copyright © 2012 Invenietis. Tous Droits Réservés.</span>
                     </div>
                 </div>
             </div>
@@ -200,25 +202,28 @@
                     this.hide = function (el, callback) {
                         el.animate({
                             opacity: 0,
-                            left: '75px'
-                        }, 800, function () {
+                            left: '40px'
+                        }, 1000, function () {
                             el.removeClass('active');
                             el.css({
                                 left: 0
                             });
+                            if (callback) callback();
                         });
                     };
                     this.show = function (el, callback) {
                         el.animate({
                             opacity: 1,
-                        }, 500, function () {
+                            left: '20px'
+                        }, 1000, function () {
                             el.addClass('active');
+                            if (callback) callback();
                         });
                     };
                 };
 
                 this.animate = function () {
-                    setInterval(showNext, _duration);
+                    setTimeout(showNext, _duration);
                 };
                 var showNext = function () {
                     var nextEl = null;
@@ -231,7 +236,9 @@
                             break;
                         }
                     }
-                    elementOperations.show(nextEl);
+                    elementOperations.show(nextEl, function () {
+                        setTimeout(showNext, _duration);
+                    });
                 };
             };
 
