--- a/MvcApplication1/Content/Site.less
+++ b/MvcApplication1/Content/Site.less
@@ -73,14 +73,11 @@ html{ color: @darkgrey; }
 	padding-right: 0;
 }
 
-.header-nav{ margin-top: 10px; }
+.header-nav{ padding: 10px 0; }
 .expand-menu{ display: none; }
 .header-links
 {
-	&.visible
-	{
-		display: block;
-	}	
+	&.visible{ display: block; }	
 	> li,
 	> li.active
 	{
@@ -91,6 +88,8 @@ html{ color: @darkgrey; }
 			color: #494E50;
 		}
 	}
+	margin: 0;
+	padding-top: 15px;
 }
 .header-logo
 {
@@ -102,10 +101,10 @@ header .title
 	display: none;
 }
 
-
-
 .landing-header
 {
+	.box-shadow( inset 0px 10px 10px -5px rgba(0,0,0,0.1) );
+
 	.full-logo
 	{
 		width: 600px;
@@ -199,9 +198,9 @@ footer
 }
 @media (max-width: 480px)
 {
-	.landing-header
+	.header-nav
 	{
-		.box-shadow( inset 0px 10px 10px -5px rgba(0,0,0,0.1) );
+		padding: 10px 0 0 0;
 	}
 	.expand-menu
 	{
@@ -218,7 +217,7 @@ footer
 		{
 			float: none;
 		}
-		margin-bottom: 10px;
+		margin-bottom: 20px;
 	}
 
 	.landing-header .full-logo
