use the same bx almost everywhere

--- a/MvcApplication1/Content/Site.less
+++ b/MvcApplication1/Content/Site.less
@@ -46,18 +46,14 @@
 		inset 0px -10px 10px -6px rgba(0, 0, 0, 0.1) 
 	);
 }
-.simple-bx
+.top-bx
 {
-	border-top: 1px solid #eee;
-	.box-shadow(
-		inset 0px -10px 25px -6px rgba(0, 0, 0, 0.08) 
-	);
+	.box-shadow( inset 0px 10px 10px -5px rgba(0,0,0,0.1) );
 }
 .orange
 {
 	color: white;
 	background-color: @orange;
-	.double-bx;
 }
 .light-orange
 {
@@ -102,8 +98,6 @@ header .title
 
 .landing-header
 {
-	.box-shadow( inset 0px 10px 10px -5px rgba(0,0,0,0.1) );
-
 	.full-logo
 	{
 		width: 600px;
