--- a/MvcApplication1/Views/Home/Index.cshtml
+++ b/MvcApplication1/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
         </div>
         <div class="row-fluid">
             <div class="span12">
-                <header class="landing-header">
+                <header class="landing-header top-bx">
                     <div class="container">
                         <div class="row-fluid">
                             <div class="span12">
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="row-fluid">
-            <div class="span12 orange">
+            <div class="span12 orange double-bx">
                 <section class="container">
                     <div class="row-fluid">
                         <div class="span8">
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="row-fluid">
-            <div class="span12 simple-bx">
+            <div class="span12">
                 <section class="container">
                     <div class="row-fluid">
                         <div class="span4 hidden-phone">
@@ -98,7 +98,7 @@
             </div>
         </div>
         <div class="row-fluid">
-            <div class="span12 light-orange simple-bx">
+            <div class="span12 light-orange top-bx">
                 <section class="container">
                     <div class="row-fluid">
                         <div class="span8">
@@ -122,7 +122,7 @@
             </div>
         </div>
         <div class="row-fluid">
-            <div class="span12 simple-bx">
+            <div class="span12 top-bx">
                 <section class="container">
                     <div class="row-fluid">
                         <div class="span4 hidden-phone">
