--- a/MvcApplication1/Views/Home/Index.cshtml
+++ b/MvcApplication1/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0">
     <link href="Content/bootstrap.min.css" rel="stylesheet">
     <link href="Content/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="Content/Site.less" rel="stylesheet">
