--- a/MvcApplication1/Content/Site.less
+++ b/MvcApplication1/Content/Site.less
@@ -120,7 +120,7 @@ section
 {
 	padding: 50px 0;
 		
-	h1{ text-align: center; margin-top: 0; margin-bottom: 15px; font-family: "Lucida Sans Unicode";}
+	h1{ text-align: center; margin-top: 0; margin-bottom: 15px; font-family: "Lucida Sans Unicode", Helvetica, Arial, sans-serif;}
 	.text{ font-size: 17px; line-height: 25px; }
 	em
 	{
