Some style change and add background to the Approche section

--- a/MvcApplication1/Views/Home/Index.cshtml
+++ b/MvcApplication1/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
                     <div class="row-fluid">
                         <div class="span12">
                             <a href="#">
-                                <img alt="Invenietis" class="header-logo pull-left" src="Content/logo.png" />
+                                <img alt="Invenietis" class="header-logo pull-left" src="Content/logo-small.png" />
                             </a>
                             <a class="expand-menu" href="javascript:void(0);"><img src="@Url.Content("~/content/images/menu.png")" /></a>
                             <ul class="nav nav-pills pull-right header-links">
@@ -46,6 +46,9 @@
                                         <h1>Conseil</h1>
                                     </div>*@
                                     <img alt="Invenietis" src="Content/logo.png" />
+                                    <div class="keywords">
+                                        <h1 class="active" style="opacity: 1; left: 20px;">Accompagne et réalise vos projets IT</h1>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -58,7 +61,7 @@
                 <section class="container">
                     <div class="row-fluid">
                         <div class="span8">
-                            <h1>Acide Désoxyr..</h1>
+                            <h1>Génome</h1>
                             <div class="text">
                                 <p>Invenietis est une entreprise basée à Paris, animée par 8 passionnés, spécialistes en Ingénierie Logicielle. L’aventure a commencé en 2004 avec 2 personnes pour arriver aujourd’hui à une équipe opérationnelle, cohérente et disponible pour résoudre les problématiques complexes des projets web et bureautique actuels. Notre entreprise est avant tout un moyen d’aider nos partenaires et clients à créer rapidement de la valeur en leur permettant de se consacrer pleinement à leur cœur de métier. Nous cherchons à établir des relations de confiance, d’humain à humain, pour accompagner les projets sur le long terme.</p>
                             </div>
@@ -85,7 +88,7 @@
                             <h1>Technique</h1>
                             <div class="text">
                                 <p>
-                                    Passionnés d’aspects techniques, nous avons toujours fait en sorte de travailler sur les technologies de pointe et porteuses d’avenir. Nous évoluons en suivant toujours les mêmes principes de sélection fine des technologies, ne retenant que celles qui font preuve d’efficience dans un contexte donné. Nous avons dès le commencement pris le parti de nous tourner vers l’environnement Microsoft et nous continuons plus que jamais à croire en l’avenir avec de cet écosystème. En ligne avec les évolutions radicales du Web d’aujourd’hui, nos architectures s’appuient souvent sur le couple classique ASP.Net MVC / SQL Server associé à des interfaces clientes HTML5, CSS3 et JavaScript.
+                                    Passionnés d’aspects techniques, nous avons toujours fait en sorte de travailler sur les technologies de pointe et porteuses d’avenir. Nous évoluons en suivant toujours les mêmes principes de sélection fine des technologies, ne retenant que celles qui font preuve d’efficience dans un contexte donné. Nous avons dès le commencement pris le parti de nous tourner vers l’environnement Microsoft et nous continuons plus que jamais à croire en l’avenir de cet écosystème. En ligne avec les évolutions radicales du Web d’aujourd’hui, nos architectures s’appuient souvent sur le couple classique ASP.Net MVC / SQL Server associé à des interfaces clientes HTML5, CSS3 et JavaScript.
                                 </p>
                             </div>
                             <em>
@@ -98,9 +101,9 @@
             </div>
         </div>
         <div class="row-fluid">
-            <div class="span12 light-orange top-bx">
+            <div class="span12 top-bx backphoto">
                 <section class="container">
-                    <div class="row-fluid">
+                    <div class="row-fluid box">
                         <div class="span8">
                             <h1>Approche</h1>
                             <div class="text">
