--- a/MvcApplication1/Views/Home/Index.cshtml
+++ b/MvcApplication1/Views/Home/Index.cshtml
@@ -38,16 +38,9 @@
                         <div class="row-fluid">
                             <div class="span12">
                                 <div class="full-logo" >
-                                    @*<div class="keywords">
-                                        <h1 class="active" style="opacity: 1; left: 20px;">Architecture</h1>
-                                        <h1>Conception</h1>
-                                        <h1>Développement</h1>
-                                        <h1>Formation</h1>
-                                        <h1>Conseil</h1>
-                                    </div>*@
                                     <img alt="Invenietis" src="Content/logo.png" />
                                     <div class="keywords">
-                                        <h1 class="active" style="opacity: 1; left: 20px;">Accompagne et réalise vos projets IT</h1>
+                                        <h1 class="active">Accompagne et réalise<br />vos projets IT</h1>
                                     </div>
                                 </div>
                             </div>
