--- a/MvcApplication1/Views/Home/Index.cshtml
+++ b/MvcApplication1/Views/Home/Index.cshtml
@@ -1,43 +1,11 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0">
-    <link href="Content/bootstrap.min.css" rel="stylesheet">
-    <link href="Content/bootstrap-responsive.min.css" rel="stylesheet">
-    <link href="Content/Site.less" rel="stylesheet">
-    <title>@ViewBag.Title</title>
-</head>
-<body>
-    <div class="container-fluid">
+﻿
         <div class="row-fluid">
             <div class="span12">
-                <nav class="container header-nav">
-                    <div class="row-fluid">
-                        <div class="span12">
-                            <a href="#">
-                                <img alt="Invenietis" class="header-logo pull-left" src="Content/logo-small.png" />
-                            </a>
-                            <a class="expand-menu" href="javascript:void(0);"><img src="@Url.Content("~/content/images/menu.png")" /></a>
-                            <ul class="nav nav-pills pull-right header-links">
-                                <li class="active">
-                                    <a href="#">Accueil</a>
-                                </li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">Contactez-nous</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-        </div>
-        <div class="row-fluid">
-            <div class="span12">
-                <header class="landing-header top-bx">
+                <header class="landing-header top-bx backphoto">
                     <div class="container">
                         <div class="row-fluid">
                             <div class="span12">
-                                <div class="full-logo" >
+                                <div class="full-logo box" >
                                     <img alt="Invenietis" src="Content/logo.png" />
                                     <div class="keywords">
                                         <h1 class="active">Accompagne et réalise<br />vos projets IT</h1>
@@ -54,7 +22,7 @@
                 <section class="container">
                     <div class="row-fluid">
                         <div class="span8">
-                            <h1>Génome</h1>
+                            <h1>ADN</h1>
                             <div class="text">
                                 <p>Invenietis est une entreprise basée à Paris, animée par 8 passionnés, spécialistes en Ingénierie Logicielle. L’aventure a commencé en 2004 avec 2 personnes pour arriver aujourd’hui à une équipe opérationnelle, cohérente et disponible pour résoudre les problématiques complexes des projets web et bureautique actuels. Notre entreprise est avant tout un moyen d’aider nos partenaires et clients à créer rapidement de la valeur en leur permettant de se consacrer pleinement à leur cœur de métier. Nous cherchons à établir des relations de confiance, d’humain à humain, pour accompagner les projets sur le long terme.</p>
                             </div>
@@ -94,9 +62,9 @@
             </div>
         </div>
         <div class="row-fluid">
-            <div class="span12 top-bx backphoto">
+            <div class="span12 top-bx approche">
                 <section class="container">
-                    <div class="row-fluid box">
+                    <div class="row-fluid">
                         <div class="span8">
                             <h1>Approche</h1>
                             <div class="text">
@@ -140,54 +108,8 @@
                 </section>
             </div>
         </div>
-        <footer class="row-fluid">
-            <div class="container">
-                <div class="row-fluid">
-                    <div class="span3">
-                        <strong>Nous connaitre</strong>
-                        <ul>
-                            <li><a href="#">Accueil</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contactez-nous</a></li>
-                        </ul>
-                        <strong>Nos produits</strong>
-                        <ul>
-                            <li><a href="https://get-package.com" target="_blank">Get-Package</a></li>
-                            <li><a href="http://civikey.fr" target="_blank">CiviKey</a></li>
-                        </ul>
-                    </div>
-                    <div class="span6 center">
-                        <strong>Suivez nous sur</strong>
-                        <div class="follow">
-                            <a href="#"><img src="@Url.Content("~/content/images/twitter.png")" style="width: 32px;"/></a>
-                            <a href="#"><img src="@Url.Content("~/content/images/gh.png")" style="width: 32px;"/></a>
-                            <a href="#"><img src="@Url.Content("~/content/images/facebook.png")" style="width: 32px;"/></a>
-                        </div>
-                    </div>
-                    <div class="span3">
-                        <div class="pull-right address">
-                            <address>
-                                <strong>Invenietis</strong><br />
-                                10 rue Mercoeur<br />
-                                75010 - Paris - France<br /><br />
-                                Email: <a href="mailto:contact@invenietis.com">contact@invenietis.com</a><br />
-                                <abbr title="Téléphone">Tel:</abbr> (+33) 1 45 92 10 45
-                            </address>
-                        </div>
-                    </div>
-                </div>
-                <div class="row-fluid">
-                    <div class="span12 center">
-                        <img src="@Url.Content("~/content/images/logo.png")" /><span>Copyright © 2012 Invenietis. Tous Droits Réservés.</span>
-                    </div>
-                </div>
-            </div>
-        </footer>
-    </div>
-</body>
-</html>
 
-@section scripts {
+@* {
     <script type="text/javascript">
         (function () {
             var animateLogo = new function () {
@@ -248,4 +170,4 @@
             });
         })();
     </script>
-}
+}*@
