--- a/MvcApplication1/Views/Shared/_Layout.cshtml
+++ b/MvcApplication1/Views/Shared/_Layout.cshtml
@@ -2,15 +2,94 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0">
+    <link href="Content/bootstrap.min.css" rel="stylesheet">
+    <link href="Content/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="Content/Site.less" rel="stylesheet">
+    <script type="text/javascript" charset="utf-8" src="Scripts/jquery-1.8.2.js"></script>
+    <script type="text/javascript" charset="utf-8" src="Scripts/bootstrap.js"></script>
+    @RenderSection( "header", false )
     <title>@ViewBag.Title</title>
-    @Styles.Render( "~/Content/themes/base/css", "~/Content/css" )
-    @Scripts.Render( "~/bundles/modernizr" )
 </head>
 <body>
-    @RenderBody()
+    <div id="body-container" class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <nav class="container header-nav">
+                    <div class="row-fluid">
+                        <div class="span12">
+                            <a href="/">
+                                <img alt="Invenietis" class="header-logo pull-left" src="Content/logo-small.png" />
+                            </a>
+                            <a class="expand-menu" href="javascript:void(0);"><img src="@Url.Content("~/content/images/menu.png")" /></a>
+                            <ul class="nav nav-pills pull-right header-links">
+                                <li class="active">
+                                    <a href="/">Accueil</a>
+                                </li>
+                                <li><a target="_blank" href="http://blog.invenietis.com">Blog</a></li>
+                                <li><a href="/Contact">Contactez-nous</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+        @RenderBody()
+        <div id="push"></div>
+    </div>
+    <div id="footer-container" class="container-fluid">
+        <footer class="row-fluid">
+            <div class="container">
+                <div class="row-fluid">
+                    <div class="span3">
+                        <strong>Nous connaitre</strong>
+                        <ul>
+                            <li><a href="/">Accueil</a></li>
+                            <li><a target="_blank" href="http://blog.invenietis.com">Blog</a></li>
+                            <li><a href="/Contact">Contactez-nous</a></li>
+                        </ul>
+                        <strong>Nos produits</strong>
+                        <ul>
+                            <li><a href="https://get-package.com" target="_blank">Get-Package</a></li>
+                            <li><a href="http://civikey.fr" target="_blank">CiviKey</a></li>
+                        </ul>
+                    </div>
+                    <div class="span6 center">
+                        <strong>Suivez nous sur</strong>
+                        <div class="follow">
+                            <a href="https://twitter.com/invenietiscorp" target="_blank"><img src="@Url.Content("~/content/images/twitter.png")" style="width: 32px;"/></a>
+                            <a href="https://github.com/Invenietis" target="_blank"><img src="@Url.Content("~/content/images/gh.png")" style="width: 32px;"/></a>
+                            <a href="https://www.facebook.com/Invenietis" target="_blank"><img src="@Url.Content("~/content/images/facebook.png")" style="width: 32px;"/></a>
+                        </div>
+                        <img src="Content/images/microsoft_black-tw.png" style="
+                            width: 200px;
+                        ">
+                    </div>
+                    <div class="span3">
+                        <div class="pull-right address">
+                            <address>
+                                <strong>Invenietis</strong>
+                                <a class="minimap" target="_blank" href="https://maps.google.fr/maps?hl=fr&q=10+rue+Mercoeur+75010,+Paris&ie=UTF-8&hq=&hnear=0x47e66df5d8215a2d:0x57cae1091e9d9095,10+Rue+Merc%C5%93ur,+75011+Paris&gl=fr&ei=Y9aXUNzXHsWw0QXD5YHIBg&ved=0CB8Q8gEwAA">
+                                    <img src="Content/images/map-bw.png" alt="Invenietis 10 rue Mercoeur 75011 Paris" > 
+                                </a>
 
-    @Scripts.Render("~/bundles/jquery")
-    @RenderSection( "scripts", required: false )
+                                10 rue Mercoeur<br />
+                                75010 - Paris<br />
+                                France<br /><br />
+                                Email: <a href="mailto:contact@invenietis.com">contact@invenietis.com</a><br />
+                                <abbr title="Téléphone">Tel:</abbr> (+33) 1 43 67 88 75
+                            </address>
+                        </div>
+                    </div>
+                </div>
+                <div class="row-fluid">
+                    <div class="span12 center" style="margin-top: 30px">
+                        <img src="@Url.Content("~/content/images/logo.png")" /><span>Copyright © 2012 Invenietis. Tous Droits Réservés.</span>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+    @RenderSection( "js", required: false )
 </body>
 </html>
