--- a/MvcApplication1/Views/Shared/_Layout.cshtml
+++ b/MvcApplication1/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <div id="body-container" class="container-fluid">
+    <div id="header-container" class="container-fluid">
         <div class="row-fluid">
             <div class="span12">
                 <nav class="container header-nav">
@@ -34,8 +34,9 @@
                 </nav>
             </div>
         </div>
+    </div>
+    <div id="body-container" class="container-fluid">
         @RenderBody()
-        <div id="push"></div>
     </div>
     <div id="footer-container" class="container-fluid">
         <footer class="row-fluid">
