Add legal page and change page title

--- a/MvcApplication1/Views/Home/Contact.cshtml
+++ b/MvcApplication1/Views/Home/Contact.cshtml
@@ -1,4 +1,7 @@
-﻿@section header
+﻿@{
+    ViewBag.Title = "Contact";
+}
+@section header
 {
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBknlrEwPyY3YZOZeHOszmVyu2iD1dHq-U&sensor=true"></script>
     <style type="text/css">
