--- a/MvcApplication1/Views/Shared/_Layout.cshtml
+++ b/MvcApplication1/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
                         <div class="pull-right address">
                             <address>
                                 <strong>Invenietis</strong>
-                                <a class="minimap" target="_blank" href="https://maps.google.fr/maps?hl=fr&q=10+rue+Mercoeur+75010,+Paris&ie=UTF-8&hq=&hnear=0x47e66df5d8215a2d:0x57cae1091e9d9095,10+Rue+Merc%C5%93ur,+75011+Paris&gl=fr&ei=Y9aXUNzXHsWw0QXD5YHIBg&ved=0CB8Q8gEwAA">
+                                <a class="minimap" target="_blank" href="/Contact">
                                     <img src="Content/images/map-bw.png" alt="Invenietis 10 rue Mercoeur 75011 Paris" > 
                                 </a>
 
@@ -85,7 +85,11 @@
                 </div>
                 <div class="row-fluid">
                     <div class="span12 center" style="margin-top: 30px">
-                        <img src="@Url.Content("~/content/images/logo.png")" /><span>Copyright © 2012 Invenietis. Tous Droits Réservés.</span>
+                        <img src="@Url.Content("~/content/images/logo.png")" />
+                        <span>
+                            Copyright © 2012 Invenietis. Tous Droits Réservés. 
+                            <a href="/Legal"> Mentions légales</a>
+                        </span>
                     </div>
                 </div>
             </div>
